@@ -79,6 +79,17 @@ public final class ContextReaderCsv implements ContextReader {
      * 4,0,0,1,0,1
      * ~~~
      *
+     * If the first attribute is the empty string, the first column corresponds to the individual identifiers. In the other case,
+     * the individual identifiers will be generated by successive integers.
+     *
+     * ~~~
+     * a,b,c,d,e
+     * 1,0,1,0,0
+     * 1,1,0,0,0
+     * 0,1,0,1,1
+     * 0,0,1,0,1
+     * ~~~
+     *
      * @param   context  a context to read
      * @param   file     a file
      *
@@ -96,19 +107,29 @@ public final class ContextReaderCsv implements ContextReader {
         CSVRecord attributes = records.get(0);
         int size = attributes.size();
 
-        if (size < 2) {
-            throw new IOException("Attributes size cannot be 0");
+        if (size == 1 && attributes.get(0).equals("")) {
+            throw new IOException("Attribute size cannot be 0");
         }
 
-        if (!attributes.get(0).equals("")) {
-            throw new IOException("The first line contains a name for the identifier");
+        int first;
+
+        if (attributes.get(0).equals("")) {
+            first = 1;
+        } else {
+            first = 0;
         }
 
-        for (int i = 1; i < size; i++) {
-            if (!context.addToAttributes(attributes.get(i))) {
-                throw new IOException("Duplicate attribute");
+        for (int i = first; i < size; i++) {
+            String attribute = attributes.get(i);
+            if (!context.addToAttributes(attribute)) {
+                throw new IOException("Duplicated attribute");
+            }
+
+            if (attribute.equals("")) {
+                throw new IOException("Empty attribute");
             }
         }
+
         for (int j = 1; j < length; j++) {
             CSVRecord record = records.get(j);
 
@@ -116,10 +137,17 @@ public final class ContextReaderCsv implements ContextReader {
                 throw new IOException("Line has a different number of attributes");
             }
 
-            String identifier = record.get(0);
+            String identifier;
+
+            if (first == 1) {
+                identifier = record.get(0);
+            } else {
+                identifier = new String(j + "");
+            }
+
             context.addToObservations(identifier);
 
-            for (int i = 1; i < size; i++) {
+            for (int i = first; i < size; i++) {
                 if (record.get(i).equals("1")) {
                     context.addExtentIntent(identifier, attributes.get(i));
                 }
